<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/title_activity_profile" />
        <item
            android:id="@+id/nav_recieved_orders"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/orders_recieved" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />

       <!-- <item
            android:id="@+id/nav_orders_sent"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/orders_sent" />

        <item
            android:id="@+id/nav_orders_recieved"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/orders_recieved" />-->
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
