<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.graduiation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="category"
            app:argType="string"
            android:defaultValue=" "
             />

        <action
            android:id="@+id/action_nav_home_to_navi_sent_orders"
            app:destination="@id/navi_sent_orders"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"
            />

        <action
            android:id="@+id/action_to_category"
            app:destination="@id/categoriesFragment"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"
            />
        <action
            android:id="@+id/action_nav_home_to_nav_share"
            app:destination="@id/nav_share" />
        <action
            android:id="@+id/action_nav_home_to_nav_profile"
            app:destination="@id/nav_profile" />
        <action
            android:id="@+id/action_nav_home_to_nav_recieved_orders"
            app:destination="@id/nav_recieved_orders"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"
            />
        <action
            android:id="@+id/action_nav_home_to_nav_send"
            app:destination="@id/nav_send"

            />
        <action
            android:id="@+id/action_nav_home_to_categoriesFragment"
            app:destination="@id/categoriesFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            />

    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.graduiation.ui.Profile.ProfileFragment"
        android:label="@string/title_activity_profile"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_recieved_orders"
        android:name="com.example.graduiation.ui.OrdersReceived.OrdersRecievedPlaceHolder"
        android:label="@string/orders_recieved"
        tools:layout="@layout/fragment_orders_recieved_place_holder"

        />

    <fragment
        android:id="@+id/navi_sent_orders"
        android:name="com.example.graduiation.ui.SentOrders.CurrentSentOrdersFragment"
        android:label="@string/sent_orders"
        tools:layout="@layout/activity_sent_orders_fragment"
        >
        <action
            android:id="@+id/action_navi_sent_orders_to_placeholderFragment"
            app:destination="@id/placeholderFragment" />
    </fragment>


    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.graduiation.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.graduiation.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/placeholderFragment"
        android:name="com.example.graduiation.ui.SentOrders.PlaceholderFragment"
        android:label="fragment_sent_orders_place_holder"
        tools:layout="@layout/fragment_sent_orders_place_holder" />
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.graduiation.ui.MealCategories.CategoriesFragment"
        android:label="Kitchens"
        tools:layout="@layout/fragment_categories" />

</navigation>